# Streamliner-AI

./: .env.template  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.example  docker-composer.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: generate_tiktok_tokens.py
src/: __main__.py
src/streamliner/: __init__.py  cli.py  config.py  cutter.py  detector.py  downloader.py  monitor.py  pipeline.py  render.py  stt.py  worker.py
src/streamliner/publisher/: __init__.py  tiktok.py
src/streamliner/storage/: __init__.py  base.py  local.py  s3.py
tests/: test_cutter.py  test_detector.py  test_worker_cleanup.py
