[project]
name = "streamliner-ai"
version = "0.1.0"
description = "AI-powered stream highlights generator"
authors = [
    { name = "Anthony Davalos", email = "anthonydavalos@msn.com" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["stream", "ai", "twitch", "tiktok"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"] # Le dice a setuptools que busque paquetes dentro de 'src'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"